--- a/public/index.html
+++ b/public/index.html
@@ -1961,7 +1961,7 @@
       <td>Message d’erreur à afficher lorsque le groupe est invalide</td>
     </tr>
     <tr>
-      <td>tiled</td>
+      <td>selection-button</td>
       <td>na</td>
       <td>na</td>
       <td>Affiche les champs au format de boutons de sélection dans une grille</td>
@@ -1997,7 +1997,7 @@
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection avec différents états">
     <qc-choice-group legend="Sélectionnez une option :"
                     name="ex-radio-select"
-                    tiled
+                    selection-button
                     column-count="2"
     >
         <label>
@@ -2037,7 +2037,7 @@
     <qc-choice-group
             name="exemple-checkbox-select"
             legend="Sélectionnez vos options"
-            tiled
+            selection-button
             column-count="2">
         <label>
             <input type="checkbox"
@@ -2073,7 +2073,7 @@
 <qc-doc-exemple caption="Exemple de boutons radio au format de boutons de sélection sur une rangée">
     <qc-choice-group legend="Choisissez une option :"
                     name="ex-radio-select-inline"
-                    tiled
+                    selection-button
                     inline
     >
         <label>
