Renommage de la classe qc-textfield-row à qc-formfield-row

--- a/public/index.html
+++ b/public/index.html
@@ -2396,7 +2396,7 @@
       />
     </qc-textfield>
 
-    <div class="qc-textfield-row">
+    <div class="qc-formfield-row">
       <qc-textfield
               label="Téléphone"
               size="sm"
@@ -2658,7 +2658,7 @@
     </qc-select>
 
     <qc-select id="qc-select-multiple-choices" multiple>
-        <label for="select-multiple-choices">Choix multiple</label>
+        <label for="select-multiple-choices">Choix multiples</label>
         <select multiple id="select-multiple-choices">
             <option value="1">Option 1</option>
             <option value="2" selected>Option 2</option>
@@ -2719,7 +2719,7 @@
                 required
                 invalid-text="Veuillez choisir un type de restaurant."
         >
-            <label for="dropdown-list-restaurants-select">Types de restaurant</label>
+            <label for="dropdown-list-restaurants-select">Types de restaurants</label>
             <select id="dropdown-list-restaurants-select">
                 <option value="Pizzeria">Pizzeria</option>
                 <option value="Pâtisserie">Pâtisserie</option>
