Correction d'erreurs typographiques dans la documentation (ToggleSwitch)

--- a/public/index.html
+++ b/public/index.html
@@ -2126,16 +2126,16 @@
 
 <h3>Exemples</h3>
 <qc-doc-exemple
-        caption="Exemple de commutateurs seuls avec leurs étiquettes respectivement à droite et à gauche"
+        caption="Exemple de commutateurs seuls avec leurs libellés respectivement à gauche et à droite."
 >
     <div style="display: flex; flex-direction: column; gap: 2.4rem">
         <qc-toggle-switch
                 id="switch-status"
-                label="Afficher l'état du commutateur à la console"
+                label="Afficher l'état du commutateur à la console."
         ></qc-toggle-switch>
         <qc-toggle-switch
                 id="switch-status-2"
-                label="Libellé aligné sur la droite (afficher au format mobile pour voir la différence)"
+                label="Libellé aligné à droite (afficher au format mobile pour voir la différence)."
                 text-align="end"
         ></qc-toggle-switch>
     </div>
@@ -2166,7 +2166,7 @@
         ></qc-toggle-switch>
         <qc-toggle-switch
                 id="messages-supprimes"
-                label="Messages supprimés (indisponible)"
+                label="Messages supprimés (désactivé)"
                 disabled
         ></qc-toggle-switch>
     </qc-toggle-switch-group>
@@ -2243,7 +2243,7 @@
         <td>legend</td>
         <td>Contenu HTML</td>
         <td></td>
-        <td>Contenu de la légende du groupe de commutateur</td>
+        <td>Contenu de la légende du groupe de commutateurs</td>
     </tr>
     <tr>
         <td>disabled</td>
@@ -2265,7 +2265,7 @@
         <td>"start" ou "end"</td>
         <td>"start"</td>
         <td>
-            Alignement du texte des libellés des commutateurs
+            Alignement du texte des libellés des commutateurs.
             <br> N.B. : Cette valeur a priorité sur celle des commutateurs du groupe.
         </td>
     </tr>
