--- a/public/index.html
+++ b/public/index.html
@@ -2304,6 +2304,7 @@
             placeholder="Recherche désactivée"
             aria-label="Recherche désactivée"
             disabled
+            left-icon
             clear-aria-label="Effacer le texte"
     ></qc-search-input>
 </qc-doc-exemple>
