Doc incluse - réorganisation des sections

--- a/src/sdg/bases/figures/_figure.html
+++ b/src/sdg/bases/figures/_figure.html
@@ -1,4 +1,4 @@
-<h2 id="figures">Figures</h2>
+<h2 id="images">Images</h2>
 <p>Les figures servent en général pour l’affichage des images.</p>
 <qc-doc-exemple id="exemple-figure"
                 caption="Exemple d’affichage d’une image"
