Correction de tournures de phrases dans le tableau d'attributs

--- a/public/index.html
+++ b/public/index.html
@@ -2619,7 +2619,8 @@
             <td>""</td>
             <td>
                 Texte d'espace réservé de la boîte de la liste déroulante
-                <br> N.B. : Si une option a une valeur nulle, l'attribut <code>placeholder</code> prend la valeur au libellé de cette option.
+                <br> N.B. : Si une option a une valeur vide (<code>value=""</code>), l'attribut <code>placeholder</code>
+                prend le libellé de cette option.
                 Voir l'exemple de <a href="#qc-select-single-choice">liste déroulante avec choix unique</a>.
             </td>
         </tr>
